# adcTool

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/yong/adc_tool/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/adc_tool/FileIo/: FileHelper.java
app/src/main/java/adc_tool/collection/: CameraHelpAPI1.java  CameraHelpAPI2.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
cpplibrary/: build.gradle
cpplibrary/src/main/: AndroidManifest.xml
cpplibrary/src/main/cpp/: CMakeLists.txt  LibyuvCpp.cpp  LibyuvCpp.h
cpplibrary/src/main/cpp/libDataTraJNI/: callBackProcess.h  libDataTraJni.cpp  libDataTraJni.h
cpplibrary/src/main/cpp/libyuvJNI/: libyuvJni.cpp  libyuvJni.h
cpplibrary/src/main/cpp/libyuvWrap/: LibyuvJni.cpp  LibyuvJni.h  libyuvWrap.cpp  libyuvWrap.h
cpplibrary/src/main/java/agora/: CppLibrary.java  LibyuvJava.java
cpplibrary/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
javalibrary/: build.gradle
javalibrary/src/main/: AndroidManifest.xml
jitpacklibrary/: build.gradle
jitpacklibrary/src/main/: AndroidManifest.xml
jitpacklibrary/src/main/res/values/: strings.xml
releaselibrary/: build.gradle
releaselibrary/libs/: adcToolCpp_1.0.2.aar  adcToolCpp_1.1.0.aar  adcToolJava_1.0.2.aar  adcToolJava_1.1.0.aar
releaselibrary/src/main/: AndroidManifest.xml
releaselibrary/src/main/java/agora/: Test.java
releaselibrary/src/main/res/values/: strings.xml
(+59 files in other folders)
